jstests/sharding/resharding_secondary_recovers_temp_ns_metadata.js
@@ -39,6 +39,13 @@ reshardingTest.withReshardingInBackground(  //
         // recovered from the config server.
         reshardingTest.stepUpNewPrimaryOnShard(recipientShardNames[0]);
         assert.commandWorked(sourceCollection.insert({oldKey: 1, newKey: 2}));
+
+        /* TODO SERVER-59721: Enable tests for update and remove
+        reshardingTest.stepUpNewPrimaryOnShard(recipientShardNames[0]);
+        assert.commandWorked(sourceCollection.update({oldKey: 1, newKey: 2}, {$set: {extra: 3}}));
+
+        reshardingTest.stepUpNewPrimaryOnShard(recipientShardNames[0]);
+        assert.commandWorked(sourceCollection.remove({oldKey: 1, newKey: 2}, {justOne: true})); */
     });
 
 reshardingTest.teardown();
